# conan-moltenvk

./: CMakeLists.txt  README.md  conandata.yml  conanfile.py
.github/workflows/: macos-x86_64-macos-m1-appleclang.yml
patches/: 0001-fix-spirv-cross-includes-1.0.38.patch  0001-fix-spirv-cross-includes-1.0.39.patch  0001-fix-spirv-cross-includes-1.0.42.patch  0001-fix-spirv-cross-includes-1.0.44.patch  0002-allow-c++11-std.patch
